 - fixed   : Minor issues here and there
 - new     : Runs under the forthcoming version of XBMC - Dharma
 - new     : Cache ffmpeg output used for framerate extraction (comm flagging)
 - new     : Added 'Enable Aggressive Caching' to Settings->MythTV to pre-cache framerate and commercial break info
 - new     : Sort Upcoming Recordings by date, title, or channel
 
06/08/2010 - MythBox RC1
=============================
 - new     : MythTV 0.23 support added - Protocol version 56 
 - new     : PageUp/PageDn (Channel Up/Channel Down on the remote) in the Recording Details screen now navigates
             to the next or previous recording
 - new     : Automatic forwarding through a commercial break when you land in the middle of the commercial break
 - new     : Added selected position and total number of items to the Recordings, Schedules, and Upcoming Recordings screens
 - new     : Selecting a recording in the Upcoming Recordings screen launches the Recording Schedule editor
 - new     : UI responsiveness tweaked to run well on an Acer Aspire Revo (1.6Ghz Atom + NVidia ION GPU) 
 - new     : TV Guide screen is back 
             PgUp/PgDown keys now scroll up/down an entire page
             Clicking on a currently playing program starts Live TV
 - new     : Program cells in the TV guide have an HD overlay indicator when appropriate
 - new     : Added keybindings and remote control buttons section to the README
 - new     : Non-idle tuners bubble to the top of the tuners list when there are more than two tuners
 - updated : Higher resolution thumbnails in Recording Details screen
 - updated : Replaced autoexpire flag with original air date on the Recording Details screen
 - updated : Faster fanart lookup on all screens + wait indicators
 - updated : Library updates: tvdb_api 1.5, IMDbPy 4.5.1  
 - updated : After deleting a recording from the Recording Details window the Recordings window would take quite a 